# galaxy-release-util

./: .gitignore  HISTORY.rst  Makefile  README.rst  TASKS.md  dev-requirements.txt  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  tox.yml
galaxy_release_util/: bootstrap_history.py  github_client.py  metadata.py  point_release.py  release_config.py  util.py
galaxy_release_util/cli/: options.py  release_util.py
tests/: test_bootstrap_history.py  test_build_command.py  test_metadata.py  test_release.py  test_release_config.py
tests/test_data/: 98.2.rst  98.2_announce.rst  98.2_announce_user.rst  98.2_prs.rst  99.0_announce.rst  release_98.2.yml
