[metadata]
author = Galaxy Project and Community
author_email = galaxy-committers@lists.galaxyproject.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Academic Free License (AFL)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Testing
description = Utlity for various tasks around creating Galaxy releases
keywords =
    Galaxy
license = AFL
license_files =
    LICENSE
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
name = galaxy-release-util
url = https://github.com/galaxyproject/galaxy-release-util
version = 0.2.0

[options]
include_package_data = True
install_requires =
    build
    click
    python-dateutil
    docutils
    packaging
    PyGithub
    requests
    twine
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
        galaxy-release-util = galaxy_release_util.cli.release_util:cli
